# kata

./: CMakeLists.txt  README.md
cmake/: doctestDownload.cmake
include/kata/: diamond.h  fizzbuzz.h  game_of_life.h  leap_year.h  number.h  range.h  roman.h  word_wrap.h
tst/: diamond.cpp  fizzbuzz.cpp  game_of_life.cpp  leap_year.cpp  number.cpp  range.cpp  roman.cpp  word_wrap.cpp
